fix alignment

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
  textarea,div{
     display: block;
     border: 1px solid black;
-    padding: 2rem;
+    padding: 0 2rem;
     margin: auto;
     margin-bottom: 2rem;
     height: 100px;
